--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.6.2",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
     "web-vitals": "^3.3.1",
