--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@wojtekmaj/react-daterange-picker": "^5.2.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-date-picker": "^10.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "0.7.1",
     "react-redux": "^8.0.5",
