--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-date-picker": "^10.2.0",
