--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "0.7.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.6.2",
     "recoil": "^0.7.7",
@@ -44,7 +44,7 @@
     "yup": "^1.1.1"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
